Fx/bus 106 adding tests (#18)
* Adding tests and fixing sql queries

* Removing no usage classes and imports

* Changing logging level and fixing dependencies

* Changing opensearch dependencies version